hphp/test/zend/bad/ext-spl/SplDoublyLinkedList_unshift_missing_parameter.php
<?php
$dll = new SplDoublyLinkedList();
var_dump($dll->unshift());
?>